# dqsuite

./: .gitignore  .pre-commit-config.yaml  .scalafmt.conf  CONTRIBUTING.md  README.md  build.sbt
.github/workflows/: release.yml
core/src/main/scala/dqsuite/: DQSuiteContext.scala  DQSuiteContextBuilder.scala  DQSuiteDatasetContext.scala  DeequFactory.scala
core/src/main/scala/dqsuite/config/: ConfigLoader.scala  DQSuiteConfig.scala  SchemaConfig.scala
core/src/main/scala/dqsuite/deequ/: DeequAnalyserFactory.scala  DeequAnalyzerFactory.scala  DeequAnomalyDetectorFactory.scala  DeequCheckFactory.scala  DeequSchemaFactory.scala
core/src/main/scala/dqsuite/runners/: PostprocessRunner.scala  ProfilingRunner.scala  SchemaCheckRunner.scala  (+1 more)
examples/data/: example.yml
examples/data/iowa_liquor_sales_demo/: iowa_liquor_sales_01.csv
examples/src/main/scala/: BasicExample.scala  ETLExample.scala
project/: plugins.sbt
python/: pyproject.toml
python/dqsuite/: __init__.py  dqsuite_context.py  dqsuite_dataset_context.py  schema_check_result.py  schema_validation_result.py  utils.py
python/examples/: basic_example.py  etl_example.py
src/main/scala/dataquality/: ArgParser.scala  DataQualityRunner.scala  DeequFactory.scala
src/main/scala/dataquality/config/: ConfigLoader.scala  DataQualityConfig.scala
src/main/scala/dataquality/utils/: HdfsUtils.scala
src/main/scala/dqsuite/: ArgParser.scala  DataQualityRunner.scala  DeequFactory.scala
src/main/scala/dqsuite/config/: ConfigLoader.scala  DataQualityConfig.scala
src/main/scala/dqsuite/utils/: HdfsUtils.scala
(+20 files in other folders)
