[tool.poetry]
name = "dqsuite"
version = "0.1.0"
description = ""
authors = ["Egor Dmitriev <egor.dmitriev@luminis.eu>"]
#readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydeequ = "^1.0.1"
pyspark = { version = "3.3.0", optional = true }

[tool.poetry.extras]
pyspark = ["pyspark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
